--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="About.html">About</a></li>
+                  <li><a href="about.html">About</a></li>
                   <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
               </nav>
