--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <h2 class="cover-heading">Contact Me</h2>
               <p class="lead"><font size="3">Email: allisonaguirre@ufl.edu</font></p>
               <p class="lead"><font size="3"><a href="https://github.com/allisonaguirre7106">GitHub</a></font></p>
-              <p class="lead"><font size="3"><a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US">LinkedIn</a></font></p>
+              <p class="lead"><font size="3"><a href="https://www.linkedin.com/pub/allison-aguirre/b4/125/454">LinkedIn</a></font></p>
             </div>
           </div>
         </div>
